--- a/src/Modal/BtModal/MapDemo.css
+++ b/src/Modal/BtModal/MapDemo.css
@@ -14,7 +14,10 @@ tr {
   color: white;
 }
 
-tr:hover {background-color: #ddd;}
+tr:hover {
+  background-color: #ddd;
+  color: black;
+}
 
 th {
   padding-top: 12px;
