--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -19,17 +19,9 @@
     display: none;
 }
 
-.LoginCarouselimgBox {
-    object-fit: cover;
-    overflow: hidden;
-}
-
-.LoginInputs {
+.LoginInputsBox {
     color: white;
-    background: #555555;
-    background: -moz-linear-gradient(left, #555555 0%, #2D2D2D 50%, #2D2D2D 100%);
-    background: -webkit-linear-gradient(left, #555555 0%, #2D2D2D 50%, #2D2D2D 100%);
-    background: linear-gradient(to right, #555555 0%, #2D2D2D 50%, #2D2D2D 100%);
+    background: #2D2D2D;
     .LoginLogoBox {
         height: 15%;
         .LoginLogoBoxText {
@@ -45,6 +37,7 @@
         }
         .LoginFormAccountPassword {
             font-size: 1.5rem;
+            text-shadow: 3px 5px 2px #2d0096;
         }
         input {
             font-size: 1.2rem;
@@ -58,6 +51,9 @@
     }
     .ForgotAdmin {
         font-size: 1.5rem;
+        // letter-spacing: .1em;
+        // text-shadow: 0 -1px 0 #fff, 0 1px 0 #2e2e2e, 0 2px 0 #2c2c2c, 0 3px 0 #2a2a2a, 0 4px 0 #282828, 0 5px 0 #262626, 0 6px 0 #242424, 0 7px 0 #222, 0 8px 0 #202020, 0 9px 0 #1e1e1e, 0 10px 0 #1c1c1c, 0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414, 0 15px 0 #121212, 0 22px 30px rgba(0,0,0,0.9);
+text-shadow: #ff0101 2px 2px 0px, #9C9C9C 4px 4px 0px;
     }
 
     .ForgotAdmin p:nth-child(1):hover {
@@ -85,7 +81,8 @@
     .LoginCarousel {
         display: block;
     }
-    .LoginInputs {
+    .LoginInputsBox {
+        background: linear-gradient(to right, #555555 0%, #2D2D2D 50%, #2D2D2D 100%);
         .LoginLogoBox {
             height: 18%;
             .LoginLogoBoxText {
