--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -50,6 +50,7 @@
         }
     }
     .ForgotAdmin {
+        height: 17%;
         font-size: 1.5rem;
         text-shadow: #ff0101 2px 2px 0px, #9C9C9C 4px 4px 0px;
     }
@@ -88,7 +89,7 @@
             }
         }
         .LoginForm {
-            margin-bottom: 35px;
+            // margin-bottom: 30px;
             .LoginFormBox {
                 margin-bottom: 40px;
             }
@@ -96,12 +97,13 @@
                 font-size: 1.5rem;
             }
             input {
+                font-size: 1rem;
                 height: 30px;
                 width: 40%;
             }
             .FbLineGoogle {
-                margin-left: 10%;
-                width: 80%;
+                margin-left: 20%;
+                width: 60%;
             }
             .LoginSignUp {
                 margin-top: 35px;
