--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -52,19 +52,19 @@
     .ForgotAdmin {
         height: 17%;
         font-size: 1.5rem;
-        text-shadow: #ff0101 2px 2px 0px, #9C9C9C 4px 4px 0px;
+        text-shadow: #2ce6ff 2px 2px 0px, #9C9C9C 4px 4px 0px;
     }
 
     .ForgotAdmin p:nth-child(1):hover {
         font-weight: 600;
         font-size: 2rem;
-        text-shadow: 2px 2px 0px #CE0000;
+        text-shadow: 2px 2px 0px #2ce6ff;
     }
 
     .ForgotAdmin p:nth-child(2):hover {
         font-weight: 600;
         font-size: 2rem;
-        text-shadow: 2px 2px 0px #CE0000;
+        text-shadow: 2px 2px 0px #2ce6ff;
     }
 }
 
